trying to fix parallax on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,8 @@ a, a:hover {
 }
 .intro-block {
     position: relative;
-    padding: 20% 0;
+    overflow: hidden;
+    padding-top: 20%;
     height: 100vh;
     color: #fff;
 }
